syntax = "proto3";

package cr8r.services;

message PUploadAttachmentRequest {
    message PMetadata {
        string name = 1;
        uint64 size = 2;
    }

    message PBody {
        bytes body = 1;
    }

    oneof chunk {
        PMetadata metadata = 1;
        PBody body = 2;
    }
}

message PUploadAttachmentReply {
    uint32 id = 1;
}
